--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <title>Tea Cozy</title>
     <link rel="stylesheet" href="resources/css/style.css">
   </head>
-  
+
   <body>
+
+    <!-- Header Section -->
     <header class="flex-container">
       <img src="./resources/images/img-tea-cozy-logo.png">
       <nav>
@@ -16,8 +18,46 @@
       </nav>
     </header>
 
+    <!-- Main Section -->
+    <div class="main">
+      <div id="jumbotron" class="flex-container">
+        <div class="content">
+          <h2>Our Mission</h2>
+          <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
+        </div>
+      </div>
+
+      <!-- Tea Section -->
+      <div id="tea-section">
+        <h2>Tea of the Month</h2>
+        <h4>What's Steeping at The Tea Cozy?</h4>
+        <div class="flex-container">
+          <div class="item">
+            <img src="./resources/images/img-berryblitz.jpg">
+            <span>Fall Berry Blitz Tea</span>
+          </div>
+          <div class="item">
+            <img src="./resources/images/img-spiced-rum.jpg">
+            <span>Spiced Rum Tea</span>
+          </div>
+          <div class="item">
+            <img src="./resources/images/img-donut.jpg">
+            <span>Seasonal Donuts</span>
+          </div>
+          <div class="item">
+            <img src="./resources/images/img-myrtle-ave.jpg">
+            <span>Myrtle Ave Tea</span>
+          </div>
+          <div class="item">
+            <img src="./resources/images/img-bedford-bizarre.jpg">
+            <span>Bedford Bizarre Tea</span>
+          </div>
+        </div>
+      </div>
 
 
+
+    </div>
 
 
 
