--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
     <header class="flex-container">
       <img src="./resources/images/img-tea-cozy-logo.png">
       <nav>
-        <a href="#">Mission</a>
-        <a href="#">Featured Tea</a>
-        <a href="#">Locations</a>
+        <a href="#mission">Mission</a>
+        <a href="#tea-section">Featured Tea</a>
+        <a href="#locations">Locations</a>
       </nav>
     </header>
 
     <!-- Main Section -->
     <div class="main">
-      <div id="jumbotron" class="flex-container">
+      <div id="mission" class="flex-container">
         <div class="content">
           <h2>Our Mission</h2>
           <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
@@ -80,6 +80,22 @@
         </div>
       </div>
     </div>
+
+    <!-- Footer Section -->
+    <div id="imprint">
+      <h2>The Tea Cozy</h2>
+      <h5>contact@theteacozy.com</h5>
+      <h5>917-555-8904</h5>
+    </div>
+
+    <footer>
+      <h5>copyright The Tea Cozy 2017</h5>
+    </footer>
+
+
+
+
+
 
 
 
